# wisherr

./: .env.example  .gitignore  .gitlab-ci.yml  API.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENCE  README.md  README_EN.md  ROADMAP.md  USAGE.md  compose.override.yaml  compose.yaml  docker-compose.yml  package-lock.json  package.json  wish.subdomain.conf
.github/: copilot-instructions.md
.github/agents/: documentation-support-agent-fr.md  security-code-analysis-agent-fr.md  software-architect-agent-fr.md  (+1 more)
backend/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  schema.sql
backend/app/: main.py  metadata.py  models.py
backend/app/activities/: routes.py
backend/app/admin/: routes.py  schemas.py  utils.py
backend/app/auth/: __init__.py  deps.py  limits.py  permissions.py  routes.py  schemas.py  utils.py
backend/app/core/: async_db.py  cache.py  db.py  limits.py  models.py  schemas.py  utils.py
backend/app/groups/: routes.py
backend/app/items/: permissions.py  routes.py  routes_new.py  schemas.py  utils.py
backend/app/notifications/: routes.py
backend/app/public/: routes.py  schemas.py  utils.py
backend/app/reservations/: routes.py  schemas.py  utils.py
backend/app/scrape/: routes.py
backend/app/shares/: routes.py
backend/app/wishlists/: permissions.py  routes.py  schemas.py  utils.py
backend/tests/: conftest.py  test_auth.py  test_wishlists.py
db/: schema.sql
frontend/: .env.example  Dockerfile  Dockerfile.prod  README.md  craco.config.js  nginx.conf  package-lock.json  package.json
(+57 files in other folders)
